[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Art/qidongjiemian/1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/三极准柔宋字体.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://StartMenu/BasicButton.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="BasicButton" type="TextureButton"]
margin_right = -34.88
margin_bottom = -34.52
texture_normal = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.844
margin_top = -29.2626
margin_right = 23.156
margin_bottom = -3.26257
custom_fonts/font = SubResource( 1 )
text = "测试"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_BasicButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_BasicButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_BasicButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BasicButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_BasicButton_pressed"]
